--- a/css/main.css
+++ b/css/main.css
@@ -136,7 +136,7 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
   clear:both;
 }
 .bg-fixed {
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-attachment: fixed;
   background-position: center center;
   -webkit-background-size: cover;
@@ -163,7 +163,7 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 /* Backgrounds */
 
 .bg-1{
-  background-image: url('../images/floor.jpg');
+  background-image: url('../images/background.jpg');
 }
 
 /* Header */
