--- a/css/main.css
+++ b/css/main.css
@@ -161,7 +161,7 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
   clear: both;
 }
 /* Backgrounds */
-
+/* credit of image goes to subtlepatterns.com */
 .bg-1{
   background-image: url('../images/background.png');
 }
