--- a/css/main.css
+++ b/css/main.css
@@ -224,7 +224,15 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 }
 
 .tab b {
-  display: none;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 14px;
+  display: block;
+  visibility: hidden;
+  padding: 2px 10px;
+  outline: none;
+  color: #888;
+  text-decoration: none;
 }
 
 .tab a:hover {
