--- a/css/main.css
+++ b/css/main.css
@@ -244,28 +244,8 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
   margin-right: 0px;
 }
 
-.tab b {
-  font-weight: bold;
-  text-transform: uppercase;
-  font-size: 14px;
-  display: block;
-  padding: 2px 10px;
-  outline: none;
-  color: #888;
-  text-decoration: none;
-}
-
-.tab b:hover {
-  text-decoration: none;
-}
-
-.tab b.active {
-  padding-top: 10px;
-  color: #e74c3c;
-}
-.tab b i{
-  font-size: 16px;
-  margin-right: 0px;
+.tab a i b{
+  display: none;
 }
 
 /* INFO */
