--- a/css/main.css
+++ b/css/main.css
@@ -244,7 +244,7 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
   margin-right: 0px;
 }
 
-.tab a i b{
+.tab a b{
   display: none;
 }
 
