--- a/css/main.css
+++ b/css/main.css
@@ -246,6 +246,7 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 
 .tab a b{
   display: none;
+  visibility: hidden;
 }
 
 /* INFO */
