--- a/css/normalize.css
+++ b/css/normalize.css
@@ -138,6 +138,11 @@ h3 {
     margin: 1em 0;
 }
 
+h7 {
+    font-size: 1.17em;
+    margin: 1em 0;
+}
+
 h4 {
     font-size: 1em;
     margin: 1.33em 0;
