--- a/css/main.css
+++ b/css/main.css
@@ -112,9 +112,9 @@ span.amp{font-family:Adobe Caslon Pro,Baskerville,"Goudy Old Style","Palatino","
 /* DEFAULT MOBILE STYLE */
 body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 /* column grid */
-.g1,.g2,.g3{display:block; position: relative; margin-left: 1%; margin-right: 1%}
+.g1,.g2,.g3,.g4{display:block; position: relative; margin-left: 1%; margin-right: 1%}
 /* 1 column grid */
-.g1,.g2,.g3{width:98.0%}
+.g1,.g2,.g3,.g4{width:98.0%}
 
 /* Wrapper */
 .main{
@@ -682,11 +682,13 @@ Change widths as necessary
  }
  /* COLUMN GRID */
  .g1,.g2,.g3 {display:inline; float: left}
+ .g4 {display:inline; float: center}
 
  /* 2 COLUMN GRID */
  .g1 {width:48.0%}
  .g2 {width:48.0%}
  .g3 {width:98.0%}
+ .g4 {width:64.667%;}
 }
 
 /* LANDSCAPE TABLET/NETBOOK/LAPTOP */
@@ -711,6 +713,7 @@ Change widths as necessary
   .g1 {width:31.333%}
   .g2 {width:64.667%;}
   .g3 {width:98.0%}
+  .g4 {width:64.667%;}
 }
 
 @media only screen and (min-width: 1280px) { 
