--- a/css/main.css
+++ b/css/main.css
@@ -114,7 +114,8 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 /* column grid */
 .g1,.g2,.g3,.g4{display:block; position: relative; margin-left: 1%; margin-right: 1%}
 /* 1 column grid */
-.g1,.g2,.g3,.g4{width:98.0%}
+.g1,.g2,.g3{width:98.0%}
+.g4{width:50.0%}
 
 /* Wrapper */
 .main{
@@ -688,7 +689,7 @@ Change widths as necessary
  .g1 {width:48.0%}
  .g2 {width:48.0%}
  .g3 {width:98.0%}
- .g4 {width:64.667%;}
+ .g4 {width:50%;}
 }
 
 /* LANDSCAPE TABLET/NETBOOK/LAPTOP */
@@ -713,7 +714,7 @@ Change widths as necessary
   .g1 {width:31.333%}
   .g2 {width:64.667%;}
   .g3 {width:98.0%}
-  .g4 {width:64.667%;}
+  .g4 {width:50%;}
 }
 
 @media only screen and (min-width: 1280px) { 
