--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ p, blockquote, q, pre, address, hr, code, samp, dl, ol, ul, form, table, fieldse
 /* TYPOGRAPHY */
 /* Composed to a scale of 12px, 14px, 16px, 18px, 21px, 24px, 36px, 48px, 60px and 72px */
 h1, h2, h3, h7, h4, h5, h6 {font-family:'Open Sans', sans-serif;color:#444;}
-h1 {margin-left: 10%; margin-right: 10%; font-size: 2.25em; line-height: 1.3333333333333333333333333333333em; text-align: center; margin-bottom: 0.6667em} /* 36px / 48px centered */
+h1 {margin: 0; font-size: 2.25em; line-height: 1.3333333333333333333333333333333em; text-align: center; margin-bottom: 0.6667em} /* 36px / 48px centered */
 h2 {margin: 0; font-size: 3em; line-height: 1em; margin-bottom: 0.5em} /* 48px / 48px */
 h3 {margin: 0; font-size: 2.25em; line-height: 1.3333333333333333333333333333333em; margin-bottom: 0.6667em} /* 36px / 48px */ 
 h4 {margin: 0; font-size: 1.5em; line-height: 1em; margin-bottom: 1em} /* 24px / 24px */
@@ -30,7 +30,7 @@ h5 {margin: 0; font-size: 1.3125em; line-height: 1.14285714285714285714285714285
 h6 {margin: 0; font-size: 1.125em; line-height: 1.3333333333333333333333333333333em; margin-bottom: 1.3333333333333333333333333333333em} /* 18px / 24px */
 p, ul, blockquote, td, th, label {margin: 0; font-size: 1em; line-height: 1.5em; margin-bottom: 1.5em} /* 16px / 24px */
 small, p.small {margin: 0; font-size: 0.875em; line-height: 1.7142857142857142857142857142857em; margin-bottom: 1.7142857142857142857142857142857em} /* 14px / 24px */
-pre {margin: 0; font-size: 1em; line-height: 1.5em; text-align: center; margin-bottom: 1.5em} /* 16px / 24px centered*/
+pre {margin-left: 10%; margin-right: 10%; font-size: 1em; line-height: 1.5em; text-align: center; margin-bottom: 1.5em} /* 16px / 24px centered*/
 
 /* CODE */
 pre {white-space: pre; white-space: pre-wrap; word-wrap: break-word} /* Allow line wrapping of 'pre' */
