--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ small, p.small {margin: 0; font-size: 0.875em; line-height: 1.714285714285714285
 pre {margin-left: 10%; margin-right: 10%; font-size: 1em; line-height: 1.5em; text-indent: 0; text-align: justify; margin-bottom: 1.5em} /* 16px / 24px centered*/
 
 /* CODE */
-pre {white-space: pre; white-space: pre-wrap; word-wrap: break-word} /* Allow line wrapping of 'pre' */
+pre {word-wrap: break-word} /* Allow line wrapping of 'pre' */
 pre, code, kbd, samp {font-size: 1em; line-height: 1.5em; margin-bottom: 1.5em; font-family: Menlo, Consolas, 'DejaVu Sans Mono', Monaco, monospace}
 
 /* TABLES */
