--- a/css/main.css
+++ b/css/main.css
@@ -33,8 +33,7 @@ small, p.small {margin: 0; font-size: 0.875em; line-height: 1.714285714285714285
 pre {margin-left: 10%; margin-right: 10%; font-size: 1em; line-height: 1.5em; text-align: justify; margin-bottom: 1.5em} /* 16px / 24px centered*/
 
 /* CODE */
-pre {word-wrap: break-word} /* Allow line wrapping of 'pre' */
-pre, code, kbd, samp {font-size: 1em; line-height: 1.5em; margin-bottom: 1.5em; font-family: Menlo, Consolas, 'DejaVu Sans Mono', Monaco, monospace}
+code, kbd, samp {font-size: 1em; line-height: 1.5em; margin-bottom: 1.5em; font-family: Menlo, Consolas, 'DejaVu Sans Mono', Monaco, monospace}
 
 /* TABLES */
 table {border-collapse: collapse; border-spacing: 0; margin-bottom: 1.5em}
@@ -731,11 +730,11 @@ Change widths as necessary
   a[href]:after {content: " (" attr(href) ")"}
   abbr[title]:after {content: " (" attr(title) ")"}
   .ir a:after, a[href^="javascript:"]:after, a[href^="#"]:after {content: ""}  /* Don't print links for images, javascript or internal links */
-  pre, blockquote {border: 1px solid #999; page-break-inside: avoid; }
+  blockquote {border: 1px solid #999; page-break-inside: avoid; }
   thead {display: table-header-group; } /* Repeat header row at top of each printed page */
   tr, img {page-break-inside: avoid; }
   img {max-width: 100% !important; }
   @page {margin: 0.5cm}
-  p, h2, h3 {orphans: 3; widows: 3}
+  p, pre, h2, h3 {orphans: 3; widows: 3}
   h2, h3 {page-break-after: avoid}
 }
