--- a/css/main.css
+++ b/css/main.css
@@ -674,16 +674,15 @@ Change widths as necessary
    border-left: 1px solid #f1f1f1;
  }
  /* COLUMN GRID */
- .g1,.g2,.g3 {display:inline; float: left}
+ .g1,.g2,.g3,.g5 {display:inline; float: left}
  .g4 {display:inline; float: center}
- .g5 {display:inline; float: left}
 
  /* 2 COLUMN GRID */
  .g1 {width:48.0%}
  .g2 {width:48.0%}
  .g3 {width:98.0%}
  .g4 {width:98.0%;}
- .g5 {width:48.0%}
+ .g5 {width:40.0%}
 }
 
 /* LANDSCAPE TABLET/NETBOOK/LAPTOP */
@@ -709,7 +708,7 @@ Change widths as necessary
   .g2 {width:64.667%;}
   .g3 {width:98.0%}
   .g4 {width:98.0%;}
-  .g5 {width:48%}
+  .g5 {width:40%}
 }
 
 @media only screen and (min-width: 1280px) { 
