--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,8 @@ span.amp{font-family:Adobe Caslon Pro,Baskerville,"Goudy Old Style","Palatino","
 /* DEFAULT MOBILE STYLE */
 body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 /* column grid */
-.g1,.g2,.g3,.g4,.g5{display:block; position: relative; margin-left: 1%; margin-right: 1%}
+.g1,.g2,.g3,.g4{display:block; position: relative; margin-left: 1%; margin-right: 1%}
+.g5{display:block; position: relative; margin-left: 5%; margin-right: 5%}
 /* 1 column grid */
 .g1,.g2,.g3,.g4,.g5{width:98.0%}
 
