--- a/css/main.css
+++ b/css/main.css
@@ -111,11 +111,11 @@ span.amp{font-family:Adobe Caslon Pro,Baskerville,"Goudy Old Style","Palatino","
 /* DEFAULT MOBILE STYLE */
 body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 /* column grid */
-.g1,.g2,.g3,.g4{display:block; position: relative; margin-left: 1%; margin-right: 1%}
+.g1,.g2,.g3,.g4,.g7{display:block; position: relative; margin-left: 1%; margin-right: 1%}
 .g5{display:block; position: relative; margin: 2%}
 .g6{display:block; position: relative; margin-left: 10%; margin-right: 10%}
 /* 1 column grid */
-.g1,.g2,.g3,.g4,.g5,.g6{width:98.0%}
+.g1,.g2,.g3,.g4,.g5,.g6,.g7{width:98.0%}
 
 /* Wrapper */
 .main{
@@ -677,7 +677,7 @@ Change widths as necessary
  }
  /* COLUMN GRID */
  .g1,.g2,.g3,.g5,.g6 {display:inline; float: left}
- .g4 {display:inline; float: center}
+ .g4,.g7 {display:inline; float: center}
 
  /* 2 COLUMN GRID */
  .g1 {width:48.0%}
@@ -686,6 +686,7 @@ Change widths as necessary
  .g4 {width:98.0%;}
  .g5 {width:46.0%}
  .g6 {width:80.0%}
+ .g7{width:48%}
 }
 
 /* LANDSCAPE TABLET/NETBOOK/LAPTOP */
@@ -711,8 +712,9 @@ Change widths as necessary
   .g2 {width:64.667%;}
   .g3 {width:98.0%}
   .g4 {width:98.0%;}
-  .g5 {width:46.0%}
-  .g6 {width:80.0%}
+  .g5 {width:46.0%;}
+  .g6 {width:80.0%;}
+  .g7 {width:20%;}
 }
 
 @media only screen and (min-width: 1280px) { 
