--- a/css/main.css
+++ b/css/main.css
@@ -112,7 +112,7 @@ span.amp{font-family:Adobe Caslon Pro,Baskerville,"Goudy Old Style","Palatino","
 body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 /* column grid */
 .g1,.g2,.g3,.g4,.g7{display:block; position: relative; margin-left: 1%; margin-right: 1%}
-.g5{display:block; position: relative; margin: 2%}
+.g5{display:block; position: relative; margin: 5%}
 .g6{display:block; position: relative; margin-left: 10%; margin-right: 10%}
 /* 1 column grid */
 .g1,.g2,.g3,.g4,.g5,.g6,.g7{width:98.0%}
@@ -676,15 +676,15 @@ Change widths as necessary
    border-left: 1px solid #f1f1f1;
  }
  /* COLUMN GRID */
- .g1,.g2,.g3,.g5,.g6 {display:inline; float: left}
- .g4,.g7 {display:inline; float: center}
+ .g1,.g2,.g3,.g6 {display:inline; float: left}
+ .g4,.g5,.g7 {display:inline; float: center}
 
  /* 2 COLUMN GRID */
  .g1 {width:48.0%}
  .g2 {width:48.0%}
  .g3 {width:98.0%}
  .g4 {width:98.0%;}
- .g5 {width:46.0%}
+ .g5 {width:48%}
  .g6 {width:80.0%}
  .g7{width:48%}
 }
@@ -712,7 +712,7 @@ Change widths as necessary
   .g2 {width:64.667%;}
   .g3 {width:98.0%}
   .g4 {width:98.0%;}
-  .g5 {width:46.0%;}
+  .g5 {width:40.0%;}
   .g6 {width:80.0%;}
   .g7 {width:20%;}
 }
