--- a/css/main.css
+++ b/css/main.css
@@ -112,7 +112,7 @@ span.amp{font-family:Adobe Caslon Pro,Baskerville,"Goudy Old Style","Palatino","
 body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 /* column grid */
 .g1,.g2,.g3,.g4,.g7{display:block; position: relative; margin-left: 1%; margin-right: 1%}
-.g5{display:block; position: relative; margin: 10%}
+.g5{display:block; position: relative; margin-left: 5%; margin-right: 5%; margin-bottom: 1%; margin-top: 1%}
 .g6{display:block; position: relative; margin-left: 10%; margin-right: 10%}
 /* 1 column grid */
 .g1,.g2,.g3,.g4,.g5,.g6,.g7{width:98.0%}
@@ -684,7 +684,7 @@ Change widths as necessary
  .g2 {width:48.0%}
  .g3 {width:98.0%}
  .g4 {width:98.0%;}
- .g5 {width:36%}
+ .g5 {width:40%}
  .g6 {width:80.0%}
  .g7{width:48%}
 }
@@ -712,7 +712,7 @@ Change widths as necessary
   .g2 {width:64.667%;}
   .g3 {width:98.0%}
   .g4 {width:98.0%;}
-  .g5 {width:25.0%;}
+  .g5 {width:40.0%;}
   .g6 {width:80.0%;}
   .g7 {width:20%;}
 }
