--- a/css/main.css
+++ b/css/main.css
@@ -676,8 +676,8 @@ Change widths as necessary
    border-left: 1px solid #f1f1f1;
  }
  /* COLUMN GRID */
- .g1,.g2,.g3,.g5,.g6 {display:inline; float: left}
- .g4,.g7 {display:inline; float: center}
+ .g1,.g2,.g3,.g6 {display:inline; float: left}
+ .g4,.g5,.g7 {display:inline; float: center}
 
  /* 2 COLUMN GRID */
  .g1 {width:48.0%}
