--- a/css/main.css
+++ b/css/main.css
@@ -112,7 +112,7 @@ span.amp{font-family:Adobe Caslon Pro,Baskerville,"Goudy Old Style","Palatino","
 body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 /* column grid */
 .g1,.g2,.g3,.g4,.g7{display:block; position: relative; margin-left: 1%; margin-right: 1%}
-.g5{display:block; position: relative; margin-left: 2%; margin-right: 2%; margin-top: 1%; margin-bottom: 1%}
+.g5{display:block; position: relative; margin-left: 5%; margin-top: 1%; margin-bottom: 1%}
 .g6{display:block; position: relative; margin-left: 10%; margin-right: 10%}
 /* 1 column grid */
 .g1,.g2,.g3,.g4,.g5,.g6,.g7{width:98.0%}
@@ -676,8 +676,8 @@ Change widths as necessary
    border-left: 1px solid #f1f1f1;
  }
  /* COLUMN GRID */
- .g1,.g2,.g3,.g6 {display:inline; float: left}
- .g4,.g5,.g7 {display:inline; float: center}
+ .g1,.g2,.g3,.g5,.g6 {display:inline; float: left}
+ .g4,.g7 {display:inline; float: center}
 
  /* 2 COLUMN GRID */
  .g1 {width:48.0%}
