--- a/css/main.css
+++ b/css/main.css
@@ -112,8 +112,8 @@ span.amp{font-family:Adobe Caslon Pro,Baskerville,"Goudy Old Style","Palatino","
 body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 /* column grid */
 .g1,.g2,.g3,.g4,.g7{display:block; position: relative; margin-left: 1%; margin-right: 1%}
-.g5{display:block; position: relative; margin-left: 5%; margin-top: 1%; margin-bottom: 1%}
-.g8{display:block; position: relative; margin-right: 5%; margin-top: 1%; margin-bottom: 1%}
+.g5{display:block; position: relative; margin-left: 8%; margin-right: 2%; margin-top: 1%; margin-bottom: 1%}
+.g8{display:block; position: relative; margin-right: 8%; margin-left: 2%; margin-top: 1%; margin-bottom: 1%}
 .g6{display:block; position: relative; margin-left: 10%; margin-right: 10%}
 /* 1 column grid */
 .g1,.g2,.g3,.g4,.g5,.g6,.g7,.g8{width:98.0%}
