--- a/css/main.css
+++ b/css/main.css
@@ -301,9 +301,11 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 } 
 /* Contact-info */
 .contact-info{
-
+	width: 50%;
+	float: left;
 }
 .contact-info-right{
+	width: 50%;
 	float: right;
 }
 .contact-info i{
