--- a/css/main.css
+++ b/css/main.css
@@ -323,6 +323,7 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 .contact-info-right i{
   color: #333;
   font-size: 46px;
+  float: right;
 }
 
 /* Item Box */
