--- a/css/main.css
+++ b/css/main.css
@@ -324,6 +324,8 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
   color: #333;
   font-size: 46px;
   float: right;
+  margin-right: 1%;
+  margin-left: 1%;
 }
 
 /* Item Box */
