--- a/css/main.css
+++ b/css/main.css
@@ -387,10 +387,11 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 }
 .image-small img{
   margin: 0px;
-  max-width: 20%;
+  width: 100%;
+  /*max-width: 20%;
   overflow: hidden;
   background-size: cover;
-  background-position: center center;
+  background-position: center center;*/
 }
 .image-overlay {
   position: absolute;
