--- a/css/main.css
+++ b/css/main.css
@@ -381,7 +381,7 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
   position: relative;
 }
 .image-small{
-  position: relative;
+  float: right;
 }
 .image img{
   margin: 0px;
