--- a/css/main.css
+++ b/css/main.css
@@ -390,6 +390,7 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 .image-small img{
   margin: 0px;
   max-width: 98%;
+  max-height: 98%;
   overflow: hidden;
   background-size: cover;
 }
