--- a/css/main.css
+++ b/css/main.css
@@ -382,6 +382,8 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 }
 .image-small{
   float: right;
+  width: auto;
+  height: auto;
   max-width: 100%;
   max-height: 100%;
 }
@@ -391,6 +393,8 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 }
 .image-small img{
   margin: 0px;
+  width: auto;
+  height: auto;
   max-width: 100%;
   max-height: 100%;
   overflow: hidden;
