--- a/css/main.css
+++ b/css/main.css
@@ -383,13 +383,14 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
   float: right;
   width: 46px;
   height: 46px;
+  margin-right: 2%;
+  margin-left: 2%;
 }
 .image img{
   margin: 0px;
   width: 100%;
 }
 .image-small img{
-  margin: 0px;
   width: auto;
   height: auto;
   max-width: 100%;
