--- a/css/main.css
+++ b/css/main.css
@@ -378,18 +378,36 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 .image{
   position: relative;
 }
-.image-small{
+.image-small-left{
   position: relative;
+  float: left;
   width: 45px;
   height: 45px;
   margin-right: 2%;
   margin-left: 2%;
 }
+.image-small-right{
+  position: relative;
+  float: right;
+  width: 45px;
+  height: 45px;
+  margin-right: 2%;
+  margin-left: 2%;
+}
+
 .image img{
   margin: 0px;
   width: 100%;
 }
-.image-small img{
+.image-small-left img{
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+  overflow: hidden;
+  background-size: cover;
+}
+.image-small-right img{
   width: auto;
   height: auto;
   max-width: 100%;
