--- a/css/main.css
+++ b/css/main.css
@@ -375,16 +375,16 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 }
 
 /* Portfolio */
+.portfolioContainer{
+    position: relative;
+    text-align: center;
+}
 .portfolioImage{
+  display: inline-block;
   position: relative;
-  display:block;
-  margin-right: 1%;
-  margin-left: 1%;
-  margin-top: 1%;
-  margin-bottom: 1%;
+  margin: 1%;
   width: 30%;
   height: 30%;
-  float: left;
 }
 .image{
   position: relative;
