Make portfolio main page

--- a/css/main.css
+++ b/css/main.css
@@ -175,7 +175,7 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 #header #logo{
   text-align: center;
 
-  display: none;
+  display: block;
 }
 #header h4{
   margin-bottom:0px;
